--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,8 @@ boto3
 
 aws-cdk.core
 aws-cdk.aws-lambda
+aws-cdk.aws-route53
+aws-cdk.aws-s3
+aws-cdk.aws-cloudfront
+aws-cdk.aws-route53-targets
+aws-cdk.aws-s3-deployment
