--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,5 @@ aws-cdk.aws-cloudfront>=1.22.0
 aws-cdk.aws-route53-targets>=1.22.0
 aws-cdk.aws-s3-deployment>=1.22.0
 aws-cdk.aws-dynamodb>=1.22.0
+aws-cdk.aws-iam>=1.22.0
+aws-cdk.custom-resources>=1.22.0
