--- a/requirements.txt
+++ b/requirements.txt
@@ -3,13 +3,13 @@ pyyaml
 boto3
 kix
 
-aws-cdk.core>=1.22.0
-aws-cdk.aws-lambda>=1.22.0
-aws-cdk.aws-route53>=1.22.0
-aws-cdk.aws-s3>=1.22.0
-aws-cdk.aws-cloudfront>=1.22.0
-aws-cdk.aws-route53-targets>=1.22.0
-aws-cdk.aws-s3-deployment>=1.22.0
-aws-cdk.aws-dynamodb>=1.22.0
-aws-cdk.aws-iam>=1.22.0
-aws-cdk.custom-resources>=1.22.0
+aws-cdk.core
+aws-cdk.aws-lambda
+aws-cdk.aws-route53
+aws-cdk.aws-s3
+aws-cdk.aws-cloudfront
+aws-cdk.aws-route53-targets
+aws-cdk.aws-s3-deployment
+aws-cdk.aws-dynamodb
+aws-cdk.aws-iam
+aws-cdk.custom-resources
