Add Cognito and Custom Auth

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,5 @@ aws-cdk.aws-route53-targets
 aws-cdk.aws-s3-deployment
 aws-cdk.aws-dynamodb
 aws-cdk.aws-iam
+aws-cdk.aws-cognito
 aws-cdk.custom-resources
